--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +16,186 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navigation-bar {
+  background-color: cornflowerblue;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 100px;
+}
+
+.navigation-bar .navigation-title h3 {
+  color: white;
+  font-size: 32px;
+  font-weight: bold;
+  /* font-family: 'Times New Roman', Times, serif; */
+}
+
+.navigation-bar .nav-cart-icon-container {
+  display: grid;
+  place-items: center;
+  grid-template-columns: auto auto;
+}
+
+.navigation-bar .nav-cart-icon-container .nav-cart-icon {
+  font-size: 32px;
+  color: white;
+  cursor: pointer;
+}
+
+.navigation-bar .nav-cart-icon-container .nav-total-cart-items {
+  background-color: rgba(0, 0, 139, 0.5);
+  color: whitesmoke;
+  width: fit-content;
+  height: fit-content;
+  padding: 2px 8px;
+  border-radius: 50%;
+  font-weight: bold;
+  text-align: center;
+  align-self: start;
+  transform: translate(-60%, -40%);
+}
+
+/* CartItem.js */
+.cart-items-section {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+  width: 60vw;
+  height: fit-content;
+  margin-left: 100px;
+}
+
+.cart-items-section .items-img-container {
+  width: fit-content;
+  height: fit-content;
+}
+
+.cart-items-section .items-img-container img {
+  width: 180px;
+  height: 190px;
+}
+
+.cart-items-section .items-img-desc {
+  width: 300px;
+  height: fit-content;
+  margin-top: 10px;
+  margin-left: 50px;
+}
+
+.cart-items-section .items-img-desc h3 {
+  text-transform: capitalize;
+  font-size: 30px;
+  font-weight: 700;
+  margin-top: 20px;
+  /* letter-spacing: 2px; */
+}
+
+.cart-items-section .items-img-desc h4 {
+  color: slategray;
+  font-weight: 400;
+  letter-spacing: 0.5;
+  margin-top: 5px;
+}
+
+.cart-items-section .items-img-desc button {
+  border: none;
+  background-color: transparent;
+  color: cornflowerblue;
+  letter-spacing: 4px;
+  font-size: 18px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.cart-items-section .items-number-toogle {
+  margin-left: 150px;
+  margin-top: 30px;
+}
+
+.cart-items-section .items-number-toogle button {
+  border: none;
+  background-color: transparent;
+  color: darkcyan;
+  font-size: 32px;
+  cursor: pointer;
+}
+
+.cart-items-section .items-number-toogle h5 {
+  text-align: center;
+  font-size: 18px;
+}
+
+/* CartContainer.js */
+.complete-cart-container .complete-cart-title {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.complete-cart-container .complete-cart-title h2 {
+  font-size: 64px;
+  font-weight: bold;
+}
+
+.complete-cart-container .complete-cart-title p {
+  font-size: 22px;
+  color: slategray;
+}
+
+.complete-cart-container .complete-cart-total {
+  margin-left: 80px;
+  margin-right: 80px;
+  margin-top: 50px;
+  margin-bottom: 20px;
+}
+
+.complete-cart-container .complete-cart-total hr {
+  background-color: slategray;
+  height: 5px;
+  border-radius: 5px;
+}
+
+.complete-cart-container .complete-cart-total h4 {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+  letter-spacing: 4px;
+  font-size: 18px;
+}
+
+.complete-cart-container .complete-cart-clear-btn {
+  display: grid;
+  place-items: center;
+  margin-bottom: 100px;
+  margin-top: 50px;
+}
+
+.complete-cart-container .complete-cart-clear-btn button {
+  padding: 10px 50px;
+  border-radius: 5px;
+  border: 1px solid crimson;
+  background-color: transparent;
+  color: crimson;
+  letter-spacing: 4px;
+  font-weight: bold;
+  font-size: 22px;
+  cursor: pointer;
+  transition: all 1s ease-in-out;
+}
+
+.complete-cart-container .complete-cart-clear-btn button:hover {
+  background-color: crimson;
+  color: white;
+}
+
+.loading {
+  display: grid;
+  width: 100vw;
+  height: 100vh;
+  place-items: center;
 }
